[package]
name = "dinput8-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
name = "dinput8"
crate-type = ["cdylib"]


[features]
Console = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = {version="0.48.0", features=["Win32_System_SystemInformation",  "Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_SystemServices", "Win32_System_Console"]}
paste = "1.0.12"
